# pythoncdmx_banner_gen

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/bannerforge/: __init__.py  cli.py  config.py  fonts.py  models.py  renderer.py  styles.py  textfit.py
src/bannerforge/api/: server.py
tests/: test_renderer.py
